--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -144,7 +144,7 @@
 .carousel-container {
   display: flex;
   justify-content: center;
-  overflow-x: hidden;
+  overflow-x: clip;
 
   .item-container {
     margin-right: 50px;
